@@ -1,3 +1,5 @@
+- Refactor: new Registrations should create StudentCandidacy instances
+
 26.2.1 (06-02-2020)
 - Bug Fix: Enrolment evaluation should always return execution interval
 
